@@ -207,6 +207,9 @@ lazy val kernel = project
       caffeine,
       catsCore,
       catsRetry,
+      catsEffect,
+      fs2,
+      fs2io,
       circeCore,
       circeParser,
       handleBars,
@@ -216,6 +219,7 @@ lazy val kernel = project
       pureconfig,
       pureconfigCats,
       munit     % Test,
+      munitCatsEffect  % Test,
       scalaTest % Test
     ),
     addCompilerPlugin(kindProjector),
@@ -239,6 +243,7 @@ lazy val testkit = project
       catsRetry,
       doobiePostgres,
       munit,
+      munitCatsEffect,
       scalaTest,
       testContainers
     ) ++ doobie,
@@ -260,9 +265,8 @@ lazy val sourcingPsql = project
       circeParser,
       classgraph,
       distageCore,
-      fs2,
-      fs2io,
       munit          % Test,
+      munitCatsEffect  % Test,
       catsEffectLaws % Test,
       logback        % Test
     ) ++ doobie,
@@ -318,10 +322,10 @@ lazy val sdk = project
       circeLiteral,
       circeGenericExtras,
       distageCore,
-      fs2,
       akkaTestKitTyped % Test,
       akkaHttpTestKit  % Test,
       munit            % Test,
+      munitCatsEffect  % Test,
       scalaTest        % Test
     ),
     addCompilerPlugin(kindProjector),
@@ -378,7 +382,6 @@ lazy val app = project
         )
       )
     },
-    Test / javaOptions    += cglibFix,
     Test / fork           := true,
     Test / test           := {
       val _ = copyPlugins.value
@@ -798,7 +801,6 @@ lazy val tests = project
       akkaStream,
       circeOptics,
       circeGenericExtras,
-      fs2,
       logback,
       akkaTestKit     % Test,
       akkaHttpTestKit % Test,
@@ -979,10 +981,7 @@ lazy val servicePackaging = {
     dockerExposedPorts    := Seq(8080),
     dockerUsername        := Some("bluebrain"),
     dockerUpdateLatest    := false,
-    dockerChmodType       := DockerChmodType.UserGroupWriteExecute,
-    dockerEnvVars         := Map(
-      "JAVA_OPTS" -> cglibFix
-    )
+    dockerChmodType       := DockerChmodType.UserGroupWriteExecute
   )
 }
 
@@ -1058,14 +1057,19 @@ val staticAnalysis =
 
 addCommandAlias("static-analysis", staticAnalysis)
 
-def unitTestsWithCoverageCommandsForModules(modules: List[String]) = {
+def runTestsWithCoverageCommandsForModules(modules: List[String]) = {
   ";coverage" +
     modules.map(module => s";$module/test").mkString +
     modules.map(module => s";$module/coverageReport").mkString
 }
-addCommandAlias("core-unit-tests-with-coverage", unitTestsWithCoverageCommandsForModules(coreModules))
-addCommandAlias("app-unit-tests-with-coverage", unitTestsWithCoverageCommandsForModules(List("app")))
-addCommandAlias("plugins-unit-tests-with-coverage", unitTestsWithCoverageCommandsForModules(List("plugins")))
+def runTestsCommandsForModules(modules: List[String]) = {
+  modules.map(module => s";$module/test").mkString
+}
 
-// This option allows distage 1.0.10 to run on JDK 17+
-val cglibFix = "--add-opens=java.base/java.lang=ALL-UNNAMED"
+addCommandAlias("core-unit-tests", runTestsCommandsForModules(coreModules))
+addCommandAlias("core-unit-tests-with-coverage", runTestsWithCoverageCommandsForModules(coreModules))
+addCommandAlias("app-unit-tests", runTestsCommandsForModules(List("app")))
+addCommandAlias("app-unit-tests-with-coverage", runTestsWithCoverageCommandsForModules(List("app")))
+addCommandAlias("plugins-unit-tests", runTestsCommandsForModules(List("plugins")))
+addCommandAlias("plugins-unit-tests-with-coverage", runTestsWithCoverageCommandsForModules(List("plugins")))
+addCommandAlias("integration-tests", runTestsCommandsForModules(List("tests")))
